Fix description overflow.

--- a/app/assets/stylesheets/views/work.css.scss
+++ b/app/assets/stylesheets/views/work.css.scss
@@ -28,9 +28,11 @@ ul#work {
 
       .data {
         @include float-left;
+        max-width: 940px;
 
         h2 {
           font-size: 48px;
+          line-height: 48px;
           color: $gray;
           margin: 15px 0;
         }
